<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Campaign</string>
    <string name="url_domain">www.campaign.com</string>
    <string name="campaignDotCom">Campaign.com</string>
    <string name="scheme_profile">profile</string>
    <string name="default_country">1102</string>
    <string name="default_theme">00A0DC</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_detail">Detail</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="miles_tone">Update</string>
    <string name="notification">Notifications</string>
    <string name="menu_home">Hub</string>
    <string name="menu_Explore">Explore</string>
    <string name="menu_Notfications">Notifications</string>
    <string name="menu_Chat">Chat</string>
    <string name="menu_Launch">Start campaign</string>
    <string name="menu_Approve">Campaign approval</string>
    <string name="exp_type_all">All</string>
    <string name="exp_type_social">Social</string>
    <string name="exp_type_marketing">Marketing</string>
    <string name="exp_type_political">Political</string>
    <string name="exp_type_religious">Religious</string>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="campaign_home">Campaign</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fb_logins">FbLogins</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_reset_password">ResetPassword</string>
    <string name="fb_login_title">#ForChange</string>
    <string name="fb_login_desc">Empowering individuals to be Changemakers</string>
    <string name="conn_fb">Connect with Facebook</string>
    <string name="link_signup">or Sign Up with email</string>
    <string name="ask_login">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="info_agree">By clicking \"Join us\", you agree to our </string>
    <string name="link_term">Terms of service</string>
    <string name="link_privacy">Privacy Policy</string>
    <string name="reset_password">Reset Password</string>
    <string name="submit_email">Submit Email</string>
    <string name="ask_forgot">Forgot your password?</string>
    <string name="new_ask_forgot">Forgot password</string>
    <string name="info_reset_pass">
        Enter your email address you used to join and we will send instructions to reset it.
    </string>
    <string name="info_submit_email">
        Enter your email address to set up your account.
    </string>
    <string name="title_activity_milestones_detail">Update Detail</string>
    <string name="title_activity_contact_us">Contact us</string>
    <string name="location">Location</string>
    <string name="location_address">
        Intiland Tower 20th Floor\nJend. Sudirman Street Kav.32\nSouth Jakarta 10220\nIndonesia
    </string>
    <string name="location_address_global">
        Suntec Tower 2, Level 31\nQueens Suite\n9 Temasek Boulevard,\nSingapore 038989
    </string>
    <string name="phone">Phone</string>
    <string name="phone_number">(6221)570 8190</string>
    <string name="phone_number_global">(65)6559 6175</string>
    <string name="title_activity_about_campaign">About Campaign</string>
    <string name="about_txt">About</string>
    <string name="about_version">Version 0.0.0</string>
    <string name="about_messenger">Campaign Chat</string>
    <string name="about_paratu">Campaign.com and the Campaign.com logos are trademarks of \nPT Uni Tokopo Teknologi. All rights reserved.\n\nMade in Indonesia.</string>
    <string name="about_description">Take part and connect the global social network\n#ForChange</string>
    <string name="title_activity_manage_notification">Manage Notifications</string>
    <string name="manage_notif_allow_supported">People Supported My Campaign</string>
    <string name="manage_notif_allow_shared">People Share My Action</string>
    <string name="manage_notif_allow_connected">People Connect Me</string>
    <string name="manage_notif_allow_comment">People Give Comment for me</string>
    <string name="manage_notif_allow_voted">People Give Vote for me</string>
    <string name="detail_invited">Invited</string>
    <string name="detail_milestone">Update</string>
    <string name="detail_milestones">Updates</string>
    <string name="detail_action">Action</string>
    <string name="detail_actions">Actions</string>
    <string name="detail_target">Target</string>
    <string name="title_activity_campaign_page">Campaign Page</string>
    <string name="action_loading">Loading</string>
    <string name="action_pleasewait">Please wait...</string>
    <string name="detail_readmore">Read More</string>
    <string name="title_activity_detail_action_view">DetailActionViewActivity</string>
    <string name="text_supporter">Supporter</string>
    <string name="text_community">Community</string>
    <string name="text_supporters">Supporters</string>
    <string name="text_heart">Hearted by</string>
    <string name="detail_action_add_as_contact">Add as Contact</string>
    <string name="detail_action_report_abuse">Report Abuse</string>
    <string name="title_activity_detail_action_comments">Comments</string>
    <string name="text_support">Support</string>
    <string name="text_feature">Feature an action</string>
    <string name="text_photo">Photo</string>
    <string name="text_video">Video</string>
    <string name="text_audio">Audio</string>
    <string name="text_quote">Quote</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_crowdfund">Crowdfund</string>
    <string name="support_campaign">Support Campaign</string>
    <string name="take_action">Take Action</string>
    <string name="leave_campaign">Leave Campaign</string>
    <string name="popup_view_leave">Leave</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="alert_redirect_URLCampaign">Campaign not found</string>
    <string name="alert_redirect_URLProfile">Profile not found</string>
    <string name="alert_redirect_URLAction">Action not found</string>
    <string name="alert_redirect_URLUpdate">Update not found</string>
    <string name="alert_support_error">Support Failed</string>
    <string name="alert_empty_field">Please insert empty field</string>
    <string name="alert_updates_date">You can only choose the current or previous dates.</string>
    <string name="alert_failed_retrieve">Failed to retrieve data settings.</string>
    <string name="alert_CP_MinCharacter">Your password must be at least 5 characters.</string>
    <string name="alert_CP_DoNotMatch">New password do not match.</string>
    <string name="alert_CP_Incorrectly">Your current password was entered incorrectly. Please try again.</string>
    <string name="title_activity_take_action">Take Action</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="upload_video">Upload Video</string>
    <string name="upload_audio">Upload Audio</string>
    <string name="add_quote">Add Quote</string>
    <string name="takeAction_infoPhoto">Snap a shot to take a stand. Selfies, wefies, welcomed</string>
    <string name="takeAction_infoPhoto3">Max. 10MB file size</string>
    <string name="takeAction_infoPhoto4">Include JPG or PNG format</string>
    <string name="takeAction_infoPhoto5">Min. 500px X 500px resolution</string>
    <string name="takeAction_infoVideo">Move the world through sound and motion.</string>
    <string name="takeAction_infoVideo2">Max. 15 seconds</string>
    <string name="takeAction_infoVideo3">Max. 10MB file size</string>
    <string name="takeAction_infoVideo4">Include MP4 or MOV format</string>
    <string name="takeAction_infoAudio">Stand on your crate, speak up and be heard!</string>
    <string name="takeAction_infoAudio2">Max. 5MB file size</string>
    <string name="takeAction_infoAudio3">Include MP3 or MP4 format</string>
    <string name="takeAction_infoQuote">Words are the mightiest swords. Share your perspectives loud and clear.</string>
    <string name="takeAction_thanksSupport">Thank you for your support to the</string>
    <string name="takeAction_thanksSupport2">campaign</string>
    <string name="takeAction_unsupportTitle">Unsupport Campaign</string>
    <string name="takeAction_infoUnsupport">We promise to do better. We\'re sorry to see you go.</string>
    <string name="takeAction_btnEdit">Edit</string>
    <string name="title_activity_search_result">SearchResult</string>
    <string name="title_activity_search_action_list">SearchActionList</string>
    <string name="title_activity_search_campaign_list">SearchCampaignList</string>
    <string name="title_activity_search_campaign_list_fragment">SearchCampaignListFragment</string>
    <string name="milestones">Updates</string>
    <string name="title_activity_profile_setting">General Information</string>
    <string name="title_activity_explore">Explore</string>
    <string name="title_activity_profile_detail">Changemaker</string>
    <string name="title_activity_profile_detail_myprofile">My profile</string>
    <string name="title_activity_create_campaign">New Campaign</string>
    <string name="title_activity_faq_campaign">Frequently Asked Questions</string>
    <string name="title_activity_create_campaign_step2">Launch Campaign</string>
    <string name="title_activity_edit_campaign">Edit Campaign</string>
    <string name="launcher_addCover">Display image choose</string>
    <string name="launcher_readmore">Read more</string>
    <string name="launcher_actionCountGoal">Action Count Goal</string>
    <string name="launcher_optional">Optional</string>
    <string name="launcher_endDate">End Date</string>
    <string name="launcher_defEndDate">01/01/2016</string>
    <string name="launcher_create">Create</string>
    <string name="faq_title1">Create</string>
    <string name="faq_title2">Create</string>
    <string name="faq_title3">Create</string>
    <string name="faq_desc1">Create</string>
    <string name="faq_desc2">Create</string>
    <string name="faq_desc3">Create</string>
    <string name="title_activity_action_goal">Action Count Goal</string>
    <string name="starter">Starter</string>
    <string name="info_starter">For hyperlocal or intra-organization movements</string>
    <string name="starter_number">250</string>
    <string name="actions">Actions</string>
    <string name="recommended">Recommended</string>
    <string name="recommended_info">For movements with broad base of support</string>
    <string name="recommended_number">1000</string>
    <string name="custom">Custom</string>
    <string name="title_activity_learn_more">Learn More</string>
    <string name="alert_login_incorrect_email">Incomplete email</string>
    <string name="alert_login_minimum_password2">Your password must be at least 5 characters.</string>
    <string name="alert_login_please_fill">Please fill up the empty field.</string>
    <string name="alert_joinus_check_username">Your username must be al least 5 characters</string>
    <string name="textsuspendnew">Your account is not activated. Please check your inbox.</string>
    <string name="alert_suspended">Your account has been under review. Please</string>
    <string name="contactus">\ Contact us \ </string>
    <string name="forinformation">for more information.</string>
    <string name="agreetoabide">I agree to abide by Campaign\'s platform</string>
    <string name="communityguidelines">and community guidelines.</string>
    <string name="loginBold">Log in</string>
</resources>