<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@color/BackgroundPage"
    android:layout_height="match_parent"
    android:id="@+id/rlloginnew"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rltoolbar">
        <include
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            layout="@layout/toolbar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtregister"
            android:text="@string/sign_up"
            android:textColor="@color/CampaignBlue"
            android:textStyle="bold"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_centerVertical="true"
            android:id="@+id/rlalert"
            android:visibility="gone"
            android:background="@color/boxalert">
            <TextView
                android:id="@+id/txtPleaseFill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/alert_login_please_fill"
                android:textColor="@color/Color_alert"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textViewAlertEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/alert_login_incorrect_email"
                android:textColor="@color/Color_alert"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtAlertPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:text="@string/alert_login_minimum_password2"
                android:textColor="@color/Color_alert"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txtAlertLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:text=""
                android:textColor="@color/Color_alert"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true">
                <TextView
                    android:id="@+id/txtAlertLoginNotActive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:maxLines="2"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="@string/textsuspendnew"
                    android:textColor="@color/Color_alert"
                    android:visibility="gone" />
            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_joinus_check_username"
                android:textColor="@color/Color_alert"
                android:id="@+id/textcheckusername"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:visibility="gone"/>

            <RelativeLayout
                android:id="@+id/rlAlertLoginDefault"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/textViewSuspend1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alert_suspended"
                    android:textColor="@color/Color_alert"/>



                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewSuspend1"
                    >
                    <TextView
                        android:id="@+id/txtcontactus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contactus"
                        android:textColor="@color/Color_alert"
                        android:textStyle="bold" />
                    <TextView
                        android:id="@+id/textViewSuspend4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forinformation"
                        android:textColor="@color/Color_alert"
                        android:layout_toRightOf="@+id/txtcontactus"/>

                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlAlertLoginDefault2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:visibility="gone"
                android:layout_marginLeft="20dp">

                <TextView
                    android:id="@+id/textViewSuspend2_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Your account is not registered. Please"
                    android:textColor="@color/Color_alert" />

                <TextView
                    android:id="@+id/txtgotoregister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/textViewSuspend2_1"
                    android:text=" Register. "
                    android:textColor="@color/Color_alert"
                    android:textStyle="bold" />

            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rltoolbar"
        android:layout_above="@+id/rlbtm2">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="50dp">

            <RelativeLayout
                android:id="@+id/rlusername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/border_linear_gray"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp">

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlusername"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/border_linear_gray"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp">


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rletpass"
                    android:layout_below="@+id/txttitlepassword">



                    <ImageView
                        android:id="@+id/imgshowpass"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginRight="3dp"
                        android:layout_marginTop="3dp"
                        android:background="@drawable/ic_remove_red_eye_white" />
                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="250dp"

                android:layout_marginRight="800dp"

                android:paddingBottom="50dp">

                <TextView
                    android:id="@+id/text_activityLoginNew_yesBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:textColor="@color/CampaignBlack"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:text="Yes" />

                <TextView
                    android:id="@+id/text_activityLoginNew_noBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="40dp"
                    android:textColor="@color/CampaignBlack"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:clickable="true"
                    android:onClick="onClick"
                    android:text="No" />


            </RelativeLayout>
        </RelativeLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="300dp">

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rlbtm2"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/llbtnregister">
            <androidx.cardview.widget.CardView
                android:id="@+id/btnlogin"
                android:layout_width="0dp"
                android:layout_height="@dimen/margin_common_40"
                android:layout_weight="1"
                android:layout_alignParentRight="true"
                android:layout_alignParentBottom="true"
                card_view:cardBackgroundColor="@color/CampaignBlue"
                card_view:cardCornerRadius="20dp"
                card_view:cardElevation="0dp"
                android:layout_marginRight="90dp"
                android:layout_marginLeft="0dp"
                >

                <ImageView
                    android:id="@+id/animasi_loading"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/txtbtnlogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/loginBold"
                    android:textColor="@color/CampaignWhite"
                    android:textStyle="bold"
                    android:textSize="12sp"/>
            </androidx.cardview.widget.CardView>
            <RelativeLayout
                android:id="@+id/btnloginwithgoogle"
                android:layout_width="0dp"
                android:layout_height="@dimen/margin_common_40"
                android:layout_weight="1"
                android:background="@drawable/box_rounded_google">



                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:id="@+id/rlfb">




                </RelativeLayout>
            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/llbtnregister"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/agreetoabide"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_centerHorizontal="true"
                android:id="@+id/txtagreetoabide"/>
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_below="@+id/txtagreetoabide"
                android:layout_centerHorizontal="true">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/communityguidelines"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:id="@+id/communityguidelines"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtlearnmore"
                    android:textSize="12sp"
                    android:text="@string/title_activity_learn_more"
                    android:textColor="@color/black"
                    android:layout_toRightOf="@+id/communityguidelines"
                    android:layout_marginLeft="@dimen/margin_common_small"
                    android:textStyle="bold"/>
            </RelativeLayout>
        </RelativeLayout>
    </RelativeLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBarLoading"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/progress_blue"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"/>

    <RelativeLayout
        android:id="@+id/rlanimasi_loading"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:visibility="gone"
        android:layout_height="match_parent"
        android:background="@color/BackgroundPage">

        <ImageView
            android:id="@+id/animasi_loadingnew"
            android:layout_width="192dp"
            android:layout_height="192dp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

</RelativeLayout>